--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel=“stylesheet” href="style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Caesar Cypher</title>
 </head>
 
@@ -15,18 +15,18 @@
         </div>
 
         <div class="row" id="inputs">
-            <label class="col-form-label" for="userInput">Input</label>
-            <input type="text" class="form-control" placeholder="" id="userInput">
+            <label class="col-form-label" for="userInput">Input: </label>
+            <input type="text" class="form-control" id="userInput">
         </div>
 
         <div class="row" id="shifts">
-            <label class="col-form-label" for="shifts">Shifts:</label>
-            <input type="text" class="form-control" placeholder="" id="shifts">
+            <label class="col-form-label" for="shift">Shifts:</label>
+            <input type="text" class="form-control" id="shift">
         </div>
 
         <div class="row" id="buttons">
-            <button class="btn btn-primary" id="cypher">Cypher</button>
-            <button class="btn btn-primary" id="decypher">Decypher</button>
+            <button class="btn default" id="cypher">Cypher</button>
+            <button class="btn default" id="decypher">Decypher</button>
         </div>
 
         <div class="row output">
